# measurement_platform_MKRNB1500

./: .gitignore  LICENSE  arduino_file_generator.py  config.py  influx_db.py  orchestrator.py  pyproject.toml  readme.md
arduino_code/: Makefile  README.md
arduino_code/Parametrage/: Parametrage.ino  parameter.ino  sending_data.h  sending_data.ino
arduino_code/template/: c_template.jinja
config/: nb-iot_config.yaml
deployment/: Dockerfile  README.md  flows.json
deployment/docker-compose-iot/: docker-compose.yaml
deployment/grafana/: dashboard.yaml
deployment/grafana/dashboards/: home.json
deployment/grafana/provisioning/: datasource.yaml
deployment/node-red/: flows.json
scope/: readme.md  scope.py
sql/: models.py  sql_endpoint.py
